--- a/style/styles.css
+++ b/style/styles.css
@@ -42,13 +42,13 @@ main {
 }
 
 .menu nav ul li a {
-    color: #9a9a9a;
+    color: white;
     /* Fontes, cores e estilos da ancoragem do menu */
     text-decoration: none;
 }
 
 .menu nav ul li a:hover {
-    color: #FFF;
+    color: blue;
     /* Fontes, cores e estilos da ancoragem do menu:hover */
 }
 
@@ -79,33 +79,36 @@ main {
     color:#FFF;
 }
 
-.menuX li{
-	position: relative;
-	float:left;
-	border-right: 1px solid #c0c0c0;
-}
-.menuX li a{color:#c0c0c0;text-decoration:none;padding:5px 10px; display: block;}
-.menuX li a:hover{
-	background:#333;
-	color:#fff;
-	-moz-box-shadow: 0 3px 10px 0 blue;
-	-webkit-box-shadow: 0 3px 10px 0 blue;
-	text-shadow:0px 0px 5px blue;
-}
-.menuX li ul{
-	position:absolute;
-	top:25px;
-	left:0;
-	background-color:black;
-	display: none;
-}
-.menuX li:hover ul, .menuX li.over ul{display:block;}
-.menuX li ul li{
-	border:1px solid #c0c0c0;
-	display:block;
-	width:150px;
+
+.scroll {
+    overflow: hidden;
+    width: 100%; /* Define a largura do container */
+    background-color: aqua;
 }
 
+.anuncios {
+    display: flex;
+    gap: 20px; /* Espaçamento entre os itens */
+    animation: scrollContinuo 60s linear infinite; /* Animação contínua */
+    list-style: none;
+}
+
+.anuncio {
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    white-space: nowrap; /* Garante que o texto não quebre */
+}
+
+@keyframes scrollContinuo {
+    0% {
+        transform: translateX(100%); /* Começa fora da tela à direita */
+    }
+    100% {
+        transform: translateX(-100%); /* Termina fora da tela à esquerda */
+    }
+}
 
 .fundo {
     background-image: url(../assets/vinicula-principal.webp);
