--- a/style/styles.css
+++ b/style/styles.css
@@ -79,6 +79,29 @@ main {
     color:#FFF;
 }
 
+/*Menu Suspenso*/
+.user-menu li a{color:white;text-decoration:none;padding:5px 10px; display: block;}
+.user-menu li a:hover{
+	background:#333;
+	color:white;
+	-moz-box-shadow: 0 3px 10px 0 #ccc;
+	-webkit-box-shadow: 0 3px 10px 0 #ccc;
+	text-shadow:0px 0px 5px #fff;
+}
+.user-menu li ul{
+	position:absolute;
+	top:25px;
+	left:0;
+	background-color:black;
+	display: none;
+}
+.user-menu li:hover ul, .user-menu li.over ul{display:block;}
+.user-menu li ul li{
+	border:1px solid #c0c0c0;
+	display:block;
+	width:150px;
+}
+
 
 .scroll {
     overflow: hidden;
