--- a/style/styles.css
+++ b/style/styles.css
@@ -4,6 +4,10 @@
     /* Zerando margin e bordas */
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     z-index: 0;
 }
@@ -101,7 +105,6 @@ main {
 	display:block;
 	width:150px;
 }
-
 
 .scroll {
     overflow: hidden;
