--- a/style/styles.css
+++ b/style/styles.css
@@ -116,6 +116,8 @@ main {
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .destaque {
@@ -181,16 +183,19 @@ main {
 
 /* cards da section produtos gerais*/
 
-
 .card-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     background-color: #D3D3D3; /* Fundo cinza claro */
     padding: 40px;
+    width: 1000px;
+    margin: 0 auto;
     border-radius: 20px;
     gap: 5px;
     justify-items: center;
     align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .card-item {
@@ -210,7 +215,6 @@ main {
     text-align: center;
     margin-top: 10px;
 }
-
 
 .rodape {
     background-color: #350017;
