--- a/style/styles.css
+++ b/style/styles.css
@@ -106,6 +106,12 @@ main {
 	width:150px;
 }
 
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
 .conteudo {
     padding-top: 0px;
 
