--- a/style/styles.css
+++ b/style/styles.css
@@ -144,6 +144,7 @@ ul {
     width: 100%;
     padding-top: 50px;
     padding-bottom: 50px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
 /* Remove padding do destaque */
@@ -167,11 +168,20 @@ ul {
     display: block;
 }
 
+/* titulo das categorias */
+.titulo-categoria {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 40%;
+}
+
 /* Grid de cards com fundo cinza, espaçamento e alinhamento */
 .cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    background-color: #D3D3D3;
+    background-color: #fff;
+    box-shadow: 1px 1px 5px black;
     max-width: 50%;
     margin: 0 auto;
     padding: 40px;
@@ -179,6 +189,18 @@ ul {
     gap: 5px;
     justify-items: center;
     align-items: center;
+}
+
+#tinto {
+    background-color: #8B0000;
+}
+
+#rose {
+    background-color: #FFC0CB;
+}
+
+#branco {
+    background-color: #FFFACD;
 }
 
 /* Estilo das bordas dos itens do card */
@@ -220,9 +242,10 @@ ul {
 .card-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    background-color: #D3D3D3;
+    background-color: #fff;
+    box-shadow: 1px 1px 5px black;
     padding: 40px;
-    max-width: 60%;
+    max-width: 55%;
     margin: 0 auto;
     border-radius: 20px;
     gap: 5px;
