--- a/style/styles.css
+++ b/style/styles.css
@@ -1,6 +1,6 @@
 /* Define margin e padding zero para todos os elementos, garantindo que 
    não existam espaçamentos indesejados por padrão */
-   * {
+* {
     margin: 0;
     padding: 0;
 }
@@ -23,11 +23,15 @@ main {
     width: 100%;
 }
 
+h2 {
+    padding-bottom: 20px;
+}
+
 /* Define um menu fixo na parte superior com cor de fundo e alinhamento de conteúdo */
 .menu nav {
     width: 100%;
     height: 10vh;
-    background-color: #4B1B2F;
+    background-color: #890f25;
     display: flex;
     justify-content: flex;
     position: fixed;
@@ -98,7 +102,8 @@ main {
 }
 
 /* Estilo ao passar o mouse sobre os intens que tem esses id em espeíficos*/
-#log-sin:hover, #sair:hover {
+#log-sin:hover,
+#sair:hover {
     color: goldenrod;
 }
 
@@ -121,7 +126,7 @@ main {
     border: 1px solid #c0c0c0;
     display: block;
     width: 150px;
-    background-color: #4B1B2F;
+    background-color: #890f25;
 }
 
 /* Remove bullets e padding de todas as listas */
@@ -203,6 +208,45 @@ ul {
     background-color: #FFFACD;
 }
 
+.underline-tinto,
+.underline-rose,
+.underline-branco {
+    position: relative;
+}
+
+.underline-tinto::after {
+    content: '';
+    width: 30%;
+    height: 4px;
+    /* Espessura do sublinhado */
+    background: linear-gradient(90deg, #8B0000, #d31f1fc2);
+    /* Cor do sublinhado */
+    border-radius: 2px;
+    /* Bordas arredondadas */
+}
+
+.underline-rose::after {
+    content: '';
+    width: 30%;
+    height: 4px;
+    /* Espessura do sublinhado */
+    background: linear-gradient(90deg, #8B0000, #FFC0CB);
+    /* Cor do sublinhado */
+    border-radius: 2px;
+    /* Bordas arredondadas */
+}
+
+.underline-branco::after {
+    content: '';
+    width: 30%;
+    height: 4px;
+    /* Espessura do sublinhado */
+    background: linear-gradient(90deg, #8B0000, #fff280);
+    /* Cor do sublinhado */
+    border-radius: 2px;
+    /* Bordas arredondadas */
+}
+
 /* Corrige o espaçamento do titulo da primeira categoria que fica colado na imagem de destaque*/
 #padding-corretor {
     padding-top: 50px;
@@ -225,6 +269,8 @@ ul {
     width: 100%;
     height: 50%;
     max-height: 500px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 /* Título do card centralizado */
@@ -275,6 +321,7 @@ ul {
     width: 100%;
     height: auto;
     max-height: 200px;
+    padding-top: 10px;
 }
 
 /* Centraliza o título do card */
@@ -285,13 +332,12 @@ ul {
 
 /* Fundo e largura do rodapé */
 .rodape {
-    background-color: #350017;
     width: 100%;
 }
 
 /* Estilo do footer com cor, alinhamento e sem rolagem extra */
 footer {
-    background-color: #490021;
+    background-color: #4a0814;
     color: white;
     display: flex;
     justify-content: space-around;
