--- a/style/fontes.css
+++ b/style/fontes.css
@@ -76,3 +76,10 @@
   font-style: normal;
   font-size: 80px;
 }
+
+.tangerine-title {
+  font-family: "Tangerine", cursive;
+  font-weight: 1000;
+  font-style: normal;
+  font-size: 90px;
+}
